tests/invalid/Switch_Invalid_5.whiley
import * from whiley.lang.*

function f(int x) -> int:
    if x > 0:
        break
    return 0
